--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="src" path="FlamingoBLL/src/main/resources"/>
 	<classpathentry kind="src" path="FlamingoBLL/src/test/java"/>
 	<classpathentry kind="src" path="FlamingoBLL/src/test/resources"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
